--- a/.Archive/README.md/2017-05-28 10-17-23.md
+++ b/.Archive/README.md/2017-05-28 10-17-23.md
@@ -18,7 +18,7 @@
 AppleDebugTool.shared.show()
 AppleDebugTool.shared.debugToolsPos = .topLeft
 ```
-* 在 Appdelegate 中添加方法:
+* 在 Appdelegate 中添加一下方法:
 ```
    override func touchesBegan(_ touches: Set<UITouch>, with event: UIEvent?) {
         let location = ((event?.allTouches! as NSSet!).anyObject() as? UITouch)?.location(in: self.window)
@@ -27,7 +27,6 @@ AppleDebugTool.shared.debugToolsPos = .topLeft
         }
     }
 ```
-## Realease log
-* 17.05.28 -- first commit
-
-## To Do
+## Requirements
+* iOS 8.0
+* Swift 3.0
